[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dmr-iq-surveyor"
version = "0.5.1"
description = "Offline inspection and analysis pipeline for SDRconnect wideband IQ recordings"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Shahar Moshayof"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
dmr-surveyor = "dmr_iq_surveyor.cli_v2:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dmr_iq_surveyor"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
